sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1j/errors.dfrouter
Error: Edge '' used by detector 'MQ11Fs2' is not known.
Quitting (on error).
